--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -42,7 +42,7 @@
   "AbacusIntenseCountingChild4Name": "",
   "AbacusIntenseCountingDriverVersion": "V1.0.2",
   "AbacusIntenseCountingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
-  "AbacusIntenseCountingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
+  "AbacusIntenseCountingChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
   "AbacusIntenseCountingChild2RawCode": "",
   "AbacusIntenseCountingChild3RawCode": "",
   "AbacusIntenseCountingChild4RawCode": "",
@@ -62,7 +62,7 @@
   "AbacusTimeTravelerChild4Name": "",
   "AbacusTimeTravelerDriverVersion": "",
   "AbacusTimeTravelerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
-  "AbacusTimeTravelerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
+  "AbacusTimeTravelerChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
   "AbacusTimeTravelerChild2RawCode": "",
   "AbacusTimeTravelerChild3RawCode": "",
   "AbacusTimeTravelerChild4RawCode": "",
@@ -82,7 +82,7 @@
   "AppWatchdog2Child4Name": "",
   "AppWatchdog2DriverVersion": "v2.0.2",
   "AppWatchdog2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-parent.groovy",
-  "AppWatchdog2ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
+  "AppWatchdog2Child1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
   "AppWatchdog2Child2RawCode": "",
   "AppWatchdog2Child3RawCode": "",
   "AppWatchdog2Child4RawCode": "",
@@ -102,7 +102,7 @@
   "AtHomeSimulatorChild4Name": "",
   "AtHomeSimulatorDriverVersion": "",
   "AtHomeSimulatorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-parent.groovy",
-  "AtHomeSimulatorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-child.groovy",
+  "AtHomeSimulatorChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-child.groovy",
   "AtHomeSimulatorChild2RawCode": "",
   "AtHomeSimulatorChild3RawCode": "",
   "AtHomeSimulatorChild4RawCode": "",
@@ -122,7 +122,7 @@
   "BIControlChild4Name": "",
   "BIControlDriverVersion": "",
   "BIControlParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
-  "BIControlChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
+  "BIControlChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
   "BIControlChild2RawCode": "",
   "BIControlChild3RawCode": "",
   "BIControlChild4RawCode": "",
@@ -142,7 +142,7 @@
   "CATTDirectorChild4Name": "",
   "CATTDirectorDriverVersion": "",
   "CATTDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-parent.groovy",
-  "CATTDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-child.groovy",
+  "CATTDirectorChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-child.groovy",
   "CATTDirectorChild2RawCode": "",
   "CATTDirectorChild3RawCode": "",
   "CATTDirectorChild4RawCode": "",
@@ -162,7 +162,7 @@
   "ChromecastHelperChild4Name": "",
   "ChromecastHelperDriverVersion": "",
   "ChromecastHelperParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Chromecast%20Helper/CH.groovy",
-  "ChromecastHelperChildRawCode": "",
+  "ChromecastHelperChild1RawCode": "",
   "ChromecastHelperChild2RawCode": "",
   "ChromecastHelperChild3RawCode": "",
   "ChromecastHelperChild4RawCode": "",
@@ -182,7 +182,7 @@
   "DeparturesChild4Name": "",
   "DeparturesDriverVersion": "",
   "DeparturesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-parent.groovy",
-  "DeparturesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
+  "DeparturesChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
   "DeparturesChild2RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/A-child.groovy",
   "DeparturesChild3RawCode": "",
   "DeparturesChild4RawCode": "",
@@ -202,7 +202,7 @@
   "DeviceSequencerChild4Name": "",
   "DeviceSequencerDriverVersion": "",
   "DeviceSequencerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-parent.groovy",
-  "DeviceSequencerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-child.groovy",
+  "DeviceSequencerChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-child.groovy",
   "DeviceSequencerChild2RawCode": "",
   "DeviceSequencerChild3RawCode": "",
   "DeviceSequencerChild4RawCode": "",
@@ -222,7 +222,7 @@
   "DeviceWatchdogChild4Name": "",
   "DeviceWatchdogDriverVersion": "V1.0.4",
   "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
-  "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
+  "DeviceWatchdogChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
   "DeviceWatchdogChild2RawCode": "",
   "DeviceWatchdogChild3RawCode": "",
   "DeviceWatchdogChild4RawCode": "",
@@ -242,7 +242,7 @@
   "FollowMeChild4Name": "",
   "FollowMeDriverVersion": "",
   "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
-  "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
+  "FollowMeChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
   "FollowMeChild2RawCode": "",
   "FollowMeChild3RawCode": "",
   "FollowMeChild4RawCode": "",
@@ -262,7 +262,7 @@
   "FullyKioskDirectorChild4Name": "",
   "FullyKioskDirectorDriverVersion": "",
   "FullyKioskDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-parent.groovy",
-  "FullyKioskDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-child.groovy",
+  "FullyKioskDirectorChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-child.groovy",
   "FullyKioskDirectorChild2RawCode": "",
   "FullyKioskDirectorChild3RawCode": "",
   "FullyKioskDirectorChild4RawCode": "",
@@ -282,7 +282,7 @@
   "GentleWakeUpChild4Name": "",
   "GentleWakeUpDriverVersion": "v1.0.0",
   "GentleWakeUpParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-parent.groovy",
-  "GentleWakeUpChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-child.groovy",
+  "GentleWakeUpChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-child.groovy",
   "GentleWakeUpChild2RawCode": "",
   "GentleWakeUpChild3RawCode": "",
   "GentleWakeUpChild4RawCode": "",
@@ -302,7 +302,7 @@
   "Life360TrackerChild4Name": "",
   "Life360TrackerDriverVersion": "",
   "Life360TrackerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
-  "Life360TrackerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-child.groovy",
+  "Life360TrackerChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-child.groovy",
   "Life360TrackerChild2RawCode": "",
   "Life360TrackerChild3RawCode": "",
   "Life360TrackerChild4RawCode": "",
@@ -322,7 +322,7 @@
   "Life360withStatesChild4Name": "",
   "Life360withStatesDriverVersion": "v1.1.3",
   "Life360withStatesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-app.groovy",
-  "Life360withStatesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-driver.groovy",
+  "Life360withStatesChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-driver.groovy",
   "Life360withStatesChild2RawCode": "",
   "Life360withStatesChild3RawCode": "",
   "Life360withStatesChild4RawCode": "",
@@ -342,7 +342,7 @@
   "LightingEffectsChild4Name": "",
   "LightingEffectsDriverVersion": "",
   "LightingEffectsParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Parent.groovy",
-  "LightingEffectsChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Child.groovy",
+  "LightingEffectsChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Child.groovy",
   "LightingEffectsChild2RawCode": "",
   "LightingEffectsChild3RawCode": "",
   "LightingEffectsChild4RawCode": "",
@@ -362,7 +362,7 @@
   "MagicCubeChild4Name": "",
   "MagicCubeDriverVersion": "",
   "MagicCubeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-parent.groovy",
-  "MagicCubeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-child.groovy",
+  "MagicCubeChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-child.groovy",
   "MagicCubeChild2RawCode": "",
   "MagicCubeChild3RawCode": "",
   "MagicCubeChild4RawCode": "",
@@ -382,7 +382,7 @@
   "MotionControlledSceneLightingChild4Name": "",
   "MotionControlledSceneLightingDriverVersion": "",
   "MotionControlledSceneLightingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Parent.groovy",
-  "MotionControlledSceneLightingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Child.groovy",
+  "MotionControlledSceneLightingChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Child.groovy",
   "MotionControlledSceneLightingChild2RawCode": "",
   "MotionControlledSceneLightingChild3RawCode": "",
   "MotionControlledSceneLightingChild4RawCode": "",
@@ -402,7 +402,7 @@
   "NotifierPlusChild4Name": "",
   "NotifierPlusDriverVersion": "",
   "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
-  "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
+  "NotifierPlusChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
   "NotifierPlusChild2RawCode": "",
   "NotifierPlusChild3RawCode": "",
   "NotifierPlusChild4RawCode": "",
@@ -422,7 +422,7 @@
   "OneataTimeChild4Name": "",
   "OneataTimeDriverVersion": "",
   "OneataTimeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Parent.groovy",
-  "OneataTimeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy",
+  "OneataTimeChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy",
   "OneataTimeChild2RawCode": "",
   "OneataTimeChild3RawCode": "",
   "OneataTimeChild4RawCode": "",
@@ -442,7 +442,7 @@
   "SendIP2IRChild4Name": "",
   "SendIP2IRDriverVersion": "V1.0.3",
   "SendIP2IRParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
-  "SendIP2IRChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
+  "SendIP2IRChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
   "SendIP2IRChild2RawCode": "",
   "SendIP2IRChild3RawCode": "",
   "SendIP2IRChild4RawCode": "",
@@ -462,7 +462,7 @@
   "SimpleDeviceTimerChild4Name": "",
   "SimpleDeviceTimerDriverVersion": "",
   "SimpleDeviceTimerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-parent.groovy",
-  "SimpleDeviceTimerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-child.groovy",
+  "SimpleDeviceTimerChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Device%20Timer/SDT-child.groovy",
   "SimpleDeviceTimerChild2RawCode": "",
   "SimpleDeviceTimerChild3RawCode": "",
   "SimpleDeviceTimerChild4RawCode": "",
@@ -482,7 +482,7 @@
   "SimpleIrrigationChild4Name": "",
   "SimpleIrrigationDriverVersion": "",
   "SimpleIrrigationParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
-  "SimpleIrrigationChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
+  "SimpleIrrigationChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
   "SimpleIrrigationChild2RawCode": "",
   "SimpleIrrigationChild3RawCode": "",
   "SimpleIrrigationChild4RawCode": "",
@@ -502,7 +502,7 @@
   "SnapshotChild4Name": "",
   "SnapshotDriverVersion": "v1.0.9",
   "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
-  "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
+  "SnapshotChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
   "SnapshotChild2RawCode": "",
   "SnapshotChild3RawCode": "",
   "SnapshotChild4RawCode": "",
@@ -522,7 +522,7 @@
   "WebPingerChild4Name": "",
   "WebPingerDriverVersion": "",
   "WebPingerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-parent.groovy",
-  "WebPingerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-child.groovy",
+  "WebPingerChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-child.groovy",
   "WebPingerChild2RawCode": "",
   "WebPingerChild3RawCode": "",
   "WebPingerChild4RawCode": "",
@@ -542,7 +542,7 @@
   "WelcomeHomeChild4Name": "",
   "WelcomeHomeDriverVersion": "v1.0.2",
   "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
-  "WelcomeHomeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
+  "WelcomeHomeChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
   "WelcomeHomeChild2RawCode": "",
   "WelcomeHomeChild3RawCode": "",
   "WelcomeHomeChild4RawCode": "",
