--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -159,9 +159,9 @@
   "DeparturesType": "App",
   "DeparturesParentVersion": "v2.0.0",
   "DeparturesChild1Version": "v2.0.0",
-  "DeparturesChild1Name": "Departures - Departures Child",
+  "DeparturesChild1Name": "Departures Child",
   "DeparturesChild2Version": "v2.0.0",
-  "DeparturesChild2Name": "Departures - Arrivals Child",
+  "DeparturesChild2Name": "Arrivals Child",
   "DeparturesChild3Version": "",
   "DeparturesChild3Name": "",
   "DeparturesChild4Version": "",
