--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -1,7 +1,7 @@
 {
   "GitHubAuthor": "BPTWorld",
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
-  "Apps": "Abacus Intense Counting,Abacus Time Traveler,App Watchdog 2,At Home Simulator,BI Control,CATT Director,Chromecast Helper,Departures,Device Sequencer,Device Watchdog,Follow Me,Fully Kiosk Director,Gentle Wake Up,Life360 Tracker,Life360 with States,Lighting Effects,Magic Cube,Motion Controlled Scene Lighting,Notifier Plus,One at a Time,Send IP2IR,Simple Device Timer,Simple Irrigation,Snapshot,Web Pinger,Welcome Home"
+  "Apps": "Abacus Intense Counting,Abacus Time Traveler,App Watchdog 2,At Home Simulator,BI Control,CATT Director,Chromecast Helper,Departures,Device Sequencer,Device Watchdog,Follow Me,Fully Kiosk Director,Gentle Wake Up,Life360 Tracker,Life360 with States,Lighting Effects,Magic Cube,Motion Controlled Scene Lighting,Notifier Plus,One at a Time,Send IP2IR,Simple Device Timer,Simple Irrigation,Snapshot,Web Pinger,Welcome Home",
   
   "App01": "Abacus Intense Counting",
   "App02": "Abacus Time Traveler",
