--- a/compAppDevelopers.json
+++ b/compAppDevelopers.json
@@ -1,4 +1,5 @@
 {
-  "GitHubAppDevelopers": "https://raw.githubusercontent.com/bptworld/Hubitat/master/bptworldApps.json:BPTWorld",
-                         "https://raw.githubusercontent.com/PrayerfulDrop/Hubitat/master/AaronWardAppUpdate.json:Aaron Ward"
+  "GitHubAppDevelopers": 
+      "https://raw.githubusercontent.com/bptworld/Hubitat/master/bptworldApps.json:BPTWorld",
+      "https://raw.githubusercontent.com/PrayerfulDrop/Hubitat/master/AaronWardAppUpdate.json:Aaron Ward"
 }
