--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -48,8 +48,8 @@
   "AppWatchdog2Child4Version": "",
   "AppWatchdog2Child4Name": "",
   "AppWatchdog2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-parent.groovy",
-  "AppWatchdog2Child1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
-  "AppWatchdog2Child2RawCode": "",
+  "AppWatchdog2Child1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-Apps-child.groovy",
+  "AppWatchdog2Child2RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-Drivers-child.groovy",
   "AppWatchdog2Child3RawCode": "",
   "AppWatchdog2Child4RawCode": "",
   "AppWatchdog2Discussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
