--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -175,7 +175,7 @@
   "DeviceWatchdogUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "FollowMeParentVersion": "v2.0.0",
-  "FollowMeChild1Version": "v2.0.2",
+  "FollowMeChild1Version": "v2.0.3",
   "FollowMeChild1Name": "",
   "FollowMeChild2Version": "",
   "FollowMeChild2Name": "",
@@ -189,7 +189,7 @@
   "FollowMeChild3RawCode": "",
   "FollowMeChild4RawCode": "",
   "FollowMeDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
-  "FollowMeUpdateNote": "V2.0.2 - 08/18/19 - App Watchdog 2 compatible",
+  "FollowMeUpdateNote": "V2.0.3 - 08/30/19 - Code cleanup",
   
   "FullyKioskDirectorParentVersion": "v2.0.0",
   "FullyKioskDirectorChild1Version": "v2.0.0",
