--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -447,7 +447,7 @@
   "WebPingerUpdateNote": "V2.0.1 - 09/06/19 - Add new section to 'Turn Switch(es) OFF if URL is not available, ON if everything is good'",
   
   "WelcomeHomeParentVersion": "v2.0.4",
-  "WelcomeHomeChild1Version": "v2.1.2",
+  "WelcomeHomeChild1Version": "v2.1.3",
   "WelcomeHomeChild1Name": "",
   "WelcomeHomeChild2Version": "",
   "WelcomeHomeChild2Name": "",
@@ -461,5 +461,5 @@
   "WelcomeHomeChild3RawCode": "",
   "WelcomeHomeChild4RawCode": "",
   "WelcomeHomeDiscussion": "https://community.hubitat.com/t/release-welcome-home/6445",
-  "WelcomeHomeUpdateNote": "V2.1.2 - 09/11/19 - Lot's of code changes, now handles up to 20 presence sensors/friendly names",
+  "WelcomeHomeUpdateNote": "V2.1.3 - 09/11/19 - Found a section I forgot to update!",
 }
