--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -226,7 +226,7 @@
   "GentleWakeUpUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "Life360TrackerParentVersion": "v2.0.0",
-  "Life360TrackerChild1Version": "v2.0.1",
+  "Life360TrackerChild1Version": "v2.0.2",
   "Life360TrackerChild1Name": "",
   "Life360TrackerChild2Version": "",
   "Life360TrackerChild2Name": "",
@@ -240,7 +240,7 @@
   "Life360TrackerChild3RawCode": "",
   "Life360TrackerChild4RawCode": "",
   "Life360TrackerDiscussion": "https://community.hubitat.com/t/release-life360-tracker-works-with-the-paid-and-free-versions-of-life360/18276",
-  "Life360TrackerUpdateNote": "V2.0.1 - 09/06/19 - Fixed bug with timeMove",
+  "Life360TrackerUpdateNote": "V2.0.2 - 09/20/19 - History logging adjustments",
   
   "Life360withStatesParentVersion": "v2.0.0",
   "Life360withStatesChild1Version": "",
