--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -2,7 +2,7 @@
   "GitHubAuthor": "BPTWorld",
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
   "PaypalLink": "https://paypal.me/bptworld",
-  "Apps": "Abacus Intense Counting, Abacus Time Traveler, App Watchdog 2, At Home Simulator, BI Control, CATT Director, Chromecast Helper, Departures, Device Sequencer, Device Watchdog, Follow Me, Fully Kiosk Director, Gentle Wake Up, Life360 Tracker, Life360 with States, Lighting Effects, Magic Cube, Motion Controlled Scene Lighting, Notifier Plus, One at a Time, Send IP2IR, Simple Dates, Simple Device Timer, Simple Irrigation, Snapshot, Web Pinger, Welcome Home",
+  "Apps": "Abacus Intense Counting, Abacus Time Traveler, App Watchdog 2, At Home Simulator, BI Control, CATT Director, Chromecast Helper, Departures, Device Sequencer, Device Watchdog, Follow Me, Fully Kiosk Director, Gentle Wake Up, Life360 Tracker, Life360 with States, Lighting Effects, Magic Cube, Motion Controlled Scene Lighting, Notifier Plus, One at a Time, Send IP2IR, Simple Dates, Simple Device Timer, Simple Irrigation, Tile Master, Snapshot, Web Pinger, Welcome Home",
   
   "AbacusIntenseCountingParentVersion": "v2.0.0",
   "AbacusIntenseCountingChild1Version": "v2.0.0",
@@ -428,6 +428,23 @@
   "SnapshotChild4RawCode": "",
   "SnapshotDiscussion": "https://community.hubitat.com/t/release-snapshot/12042",
   "SnapshotUpdateNote": "V2.0.1 - 09/01/19 - Added custom color options",
+  
+  "TileMasterParentVersion": "v2.0.1",
+  "TileMasterChild1Version": "v2.0.1",
+  "TileMasterChild1Name": "",
+  "TileMasterChild2Version": "",
+  "TileMasterChild2Name": "",
+  "TileMasterChild3Version": "",
+  "TileMasterChild3Name": "",
+  "TileMasterChild4Version": "",
+  "TileMasterChild4Name": "",
+  "TileMasterParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Tile%20Master/TM-Parent.groovy",
+  "TileMasterChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Tile%20Master/TM-Child.groovy",
+  "TileMasterChild2RawCode": "",
+  "TileMasterChild3RawCode": "",
+  "TileMasterChild4RawCode": "",
+  "TileMasterDiscussion": "",
+  "TileMasterUpdateNote": "V2.0.1 - 09/20/19 - Initial release.",
   
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChild1Version": "v2.0.1",
