--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -430,7 +430,7 @@
   "SnapshotUpdateNote": "V2.0.1 - 09/01/19 - Added custom color options",
   
   "TileMasterParentVersion": "v2.0.3",
-  "TileMasterChild1Version": "v2.0.5",
+  "TileMasterChild1Version": "v2.0.6",
   "TileMasterChild1Name": "",
   "TileMasterChild2Version": "",
   "TileMasterChild2Name": "",
@@ -444,7 +444,7 @@
   "TileMasterChild3RawCode": "",
   "TileMasterChild4RawCode": "",
   "TileMasterDiscussion": "https://community.hubitat.com/t/release-tile-master-create-a-tile-with-multiple-devices-and-customization-options/23140",
-  "TileMasterUpdateNote": "V2.0.5 - 09/22/19 - Table spacing enhancements",
+  "TileMasterUpdateNote": "V2.0.6 - 09/22/19 - Added ability to use links on tiles",
   
   "WebPingerParentVersion": "v2.0.0",
   "WebPingerChild1Version": "v2.0.1",
