--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -2,7 +2,7 @@
   "GitHubAuthor": "BPTWorld",
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
   "PaypalLink": "https://paypal.me/bptworld",
-  "Apps": "Abacus Intense Counting, Abacus Time Traveler, App Watchdog 2, At Home Simulator, BI Control, CATT Director, Chromecast Helper, Departures, Device Sequencer, Device Watchdog, Follow Me, Fully Kiosk Director, Gentle Wake Up, Life360 Tracker, Life360 with States, Lighting Effects, Magic Cube, Motion Controlled Scene Lighting, Notifier Plus, One at a Time, Send IP2IR, Simple Dates, Simple Device Timer, Simple Irrigation, Tile Master, Snapshot, Web Pinger, Welcome Home",
+  "Apps": "Abacus Intense Counting, Abacus Time Traveler, App Watchdog 2, At Home Simulator, BI Control, CATT Director, Chromecast Helper, Departures, Device Sequencer, Device Watchdog, Follow Me, Fully Kiosk Director, Gentle Wake Up, Home Tracker, Life360 Tracker, Life360 with States, Lighting Effects, Magic Cube, Motion Controlled Scene Lighting, Notifier Plus, One at a Time, Send IP2IR, Simple Dates, Simple Device Timer, Simple Irrigation, Tile Master, Snapshot, Web Pinger, Welcome Home",
   
   "AbacusIntenseCountingParentVersion": "v2.0.0",
   "AbacusIntenseCountingChild1Version": "v2.0.0",
@@ -224,6 +224,23 @@
   "GentleWakeUpChild4RawCode": "",
   "GentleWakeUpDiscussion": "https://community.hubitat.com/t/port-gentle-wake-up/19971",
   "GentleWakeUpUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
+  
+  "HomeTrackerParentVersion": "v2.0.0",
+  "HomeTrackerChild1Version": "v2.0.3",
+  "HomeTrackerChild1Name": "",
+  "HomeTrackerChild2Version": "",
+  "HomeTrackerChild2Name": "",
+  "HomeTrackerChild3Version": "",
+  "HomeTrackerChild3Name": "",
+  "HomeTrackerChild4Version": "",
+  "HomeTrackerChild4Name": "",
+  "HomeTrackerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Home%20Tracker/HT-parent.groovy",
+  "HomeTrackerChild1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Home%20Tracker/HT-child.groovy",
+  "HomeTrackerChild2RawCode": "",
+  "HomeTrackerChild3RawCode": "",
+  "HomeTrackerChild4RawCode": "",
+  "HomeTrackerDiscussion": "https://community.hubitat.com/t/release-home-tracker-track-the-coming-and-going-of-house-members-with-announcements-and-push-messages/22709",
+  "HomeTrackerUpdateNote": "V2.0.3 - 09/14/19 - More tweaking...",
   
   "Life360TrackerParentVersion": "v2.0.0",
   "Life360TrackerChild1Version": "v2.0.2",
