--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -243,7 +243,7 @@
   "HomeTrackerUpdateNote": "V2.0.3 - 09/14/19 - More tweaking...",
   
   "HubWatchdogParentVersion": "V1.0.0",
-  "HubWatchdogChild1Version": "V1.0.6",
+  "HubWatchdogChild1Version": "V1.0.7",
   "HubWatchdogChild1Name": "",
   "HubWatchdogChild2Version": "",
   "HubWatchdogChild2Name": "",
@@ -257,7 +257,7 @@
   "HubWatchdogChild3RawCode": "",
   "HubWatchdogChild4RawCode": "",
   "HubWatchdogDiscussion": "https://community.hubitat.com/t/release-hub-watchdog-simple-way-to-monitor-if-your-hub-is-slowing-down-or-not/23371",
-  "HubWatchdogUpdateNote": "V1.0.6 - 09/26/19 - Holds up to 80 data points, added color coding",
+  "HubWatchdogUpdateNote": "V1.0.7 - 09/26/19 - Added a 'push all' option",
   
   "Life360TrackerParentVersion": "v2.0.0",
   "Life360TrackerChild1Version": "v2.0.2",
